--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
