--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
